# inter_coach

./: .gitignore  .impeccable.md  CLAUDE.md  README.md  config.example.yaml  docker-compose.yml  project_spec.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b7a6e380ab31_initial_tables.py  c9f2d4e8a103_add_bm25_tsvector_index.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: admin.py  health.py  interviews.py  projects.py  router.py  users.py
backend/app/models/: __init__.py  base.py  interview.py  message.py  project.py  user.py
backend/app/prompts/: code_analysis.py  contextual_retrieval.py  followup.py  interview_phases.py  resume_advice.py  resume_parsing.py  review_report.py  triangulation.py
backend/app/schemas/: common.py  interview.py  message.py  project.py  user.py
backend/app/services/: analysis_engine.py  interview_engine.py  knowledge_service.py  llm_client.py  project_service.py  repo_reader.py  resume_parser.py  review_service.py  user_service.py
backend/app/utils/: cleanup.py  file_filter.py
backend/knowledge_docs/: 01_star_method.md  02_layered_questioning.md  03_open_vs_closed_questions.md  04_followup_depth.md  05_backend_focus.md  06_common_followup_directions.md  07_pressure_techniques.md  08_evaluation_dimensions.md
backend/tests/: conftest.py  test_health.py  test_interview_flow.py  test_interviews.py  test_project_flow.py  test_projects.py  test_users.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
nginx/: nginx.conf
(+36 files in other folders)
